<resources>

    <string-array name="difficulty">
        <item>Easy</item>
        <item>Normal</item>
        <item>Hard</item>
    </string-array>

    <string-array name="timelapse_choices">
        <item>15s</item>
        <item>20s</item>
        <item>25s</item>
    </string-array>

    <string-array name="images">
        <item>user0</item>
        <item>user1</item>
        <item>user2</item>
        <item>user3</item>
        <item>user4</item>
        <item>user5</item>
        <item>user6</item>
        <item>user7</item>
        <item>user8</item>
        <item>user9</item>
        <item>user10</item>
        <item>user11</item>
        <item>user12</item>
        <item>user13</item>
        <item>user14</item>
        <item>user15</item>
        <item>user16</item>
        <item>user17</item>
    </string-array>

    <string name="app_name">Caro Online</string>
    <string name="default_font">sans-serif-light</string>
    <string name="quit">Quit</string>
    <string name="single_player">Single player</string>
    <string name="two_players">Two players</string>
    <string name="play_online">Play online</string>
    <string name="back">Back</string>
    <string name="elo">Elo</string>
    <string name="rank">Rank</string>
    <string name="keep_me_login">Keep me login</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="you_must_login_to_continue">You must login to continue</string>
    <string name="authentication_error">Authentication error</string>
    <string name="disconnect">Disconnect</string>
    <string name="duel">Duel</string>
    <string name="statistic">Statistic</string>
    <string name="challenge">Challenge</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="logout">Logout</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="error_please_try_again">Error! Please try again</string>
    <string name="confirm_password_does_not_match">Confirm password does not match</string>
    <string name="error">Error</string>
    <string name="lost_connection_to_server">Lost connection to server</string>
    <string name="timelapse">Timelapse</string>
    <string name="create">Create</string>
    <string name="waiting_for_second_user">Waiting for second user</string>
    <string name="save">Save</string>
    <string name="join">Join</string>
    <string name="room">Room</string>
    <string name="warning">Warning</string>
    <string name="host_has_left_the_room">Host has left the room</string>
    <string name="you_have_been_kicked">You have been kicked</string>
    <string name="kick">Kick</string>
    <string name="ready">Ready</string>
    <string name="start">Start</string>
    <string name="rematch">Rematch</string>
    <string name="leave">Leave</string>
    <string name="congratulation">Congratulation!!</string>
    <string name="try_harder_next_time">Try harder next time</string>
    <string name="even">Even</string>
    <string name="want_to_play_with_you">Want to play with you</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="computer">Computer</string>
    <string name="player">Player</string>
    <string name="difficulty">Difficulty</string>
    <string name="new_game">New game</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="map_size">Map size</string>
    <string name="player_mark">Player mark</string>
    <string name="confirm_move">Confirm move</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="settings_will_be_applied_in_new_game">Settings will be applied in new game</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="first_player_win">First player win</string>
    <string name="second_player_win">Second player win</string>
    <string name="switch_mark">Switch mark</string>
    <string name="online">Online</string>
    <string name="the_winner_is">The winner is</string>
    <string name="your_opponent_has_left">Your opponent has left</string>
    <string name="waiting">Waiting</string>
    <string name="do_you_want_to_go_first">Do you want to go first?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="will_go_first">will go first</string>
    <string name="win">Win</string>
    <string name="lose">Lose</string>
    <string name="win_rate">Win rate</string>
    <string name="history">History</string>
    <string name="replay">Replay</string>
    <string name="error_loading_match">Error loading match</string>
    <string name="go_first_option">Go first option</string>
    <string name="ask_everytime">Ask everytime</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="your_mark">Your mark</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="x">X</string>
    <string name="o">O</string>
</resources>
