<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back"
            android:src="@drawable/ic_back"
            style="@style/ActionBarImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:text="@string/settings"
            style="@style/ActionBarText"
            app:layout_constraintStart_toEndOf="@id/back"
            app:layout_constraintTop_toTopOf="@id/back"
            app:layout_constraintBottom_toBottomOf="@id/back" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/shadow"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/go_first_option"
                android:layout_marginTop="10dp"
                style="@style/SettingsText"
                app:layout_constraintTop_toTopOf="parent"/>

            <RadioGroup
                android:id="@+id/first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/SettingsRadioGroup"
                app:layout_constraintTop_toBottomOf="@id/textView1">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/SettingsRadioButton"
                    android:text="@string/ask_everytime" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/SettingsRadioButton"
                    android:text="@string/first" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/SettingsRadioButton"
                    android:text="@string/second" />

            </RadioGroup>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_move"
                style="@style/SettingsText"
                app:layout_constraintTop_toBottomOf="@id/first" />

            <RadioGroup
                android:id="@+id/confirmMove"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/SettingsRadioGroup"
                app:layout_constraintTop_toBottomOf="@id/textView2">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/SettingsRadioButton"
                    android:text="@string/on"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/SettingsRadioButton"
                    android:text="@string/off" />

            </RadioGroup>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_mark"
                style="@style/SettingsText"
                app:layout_constraintTop_toBottomOf="@id/confirmMove" />

            <RadioGroup
                android:id="@+id/mark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/SettingsRadioGroup"
                app:layout_constraintTop_toBottomOf="@id/textView3" >

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/SettingsRadioButton"
                    android:text="@string/x"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/SettingsRadioButton"
                    android:text="@string/o" />

            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>