<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/winner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_winner_is"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congratulation"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/winner" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/message"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/leave"
            android:layout_width="110dp"
            android:layout_height="44dp"
            android:gravity="center"
            android:text="@string/leave"
            android:textSize="18sp"
            android:textColor="@color/color_alizarin"
            android:background="@drawable/background_outline_red" />

        <ToggleButton
            android:id="@+id/rematch"
            android:layout_width="110dp"
            android:layout_height="44dp"
            android:background="@drawable/button_rematch"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textOff="@string/rematch"
            android:textOn="@string/waiting"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>