<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/timelapse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timelapse"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/timelapse"
        app:layout_constraintBottom_toBottomOf="@id/timelapse"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rank"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:paddingVertical="20dp"
        app:layout_constraintTop_toBottomOf="@id/timelapse"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/rank"
        app:layout_constraintBottom_toBottomOf="@id/rank"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/rank"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="@id/password"
        app:layout_constraintBottom_toBottomOf="@id/password"
        app:layout_constraintStart_toEndOf="@id/password"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/create"
        android:layout_width="0dp"
        android:layout_height="44dp"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_solid_blue"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/back"
        android:layout_width="0dp"
        android:layout_height="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        android:layout_marginRight="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="10dp"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="@color/color_alizarin"
        android:background="@drawable/background_outline_red"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>
